5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1618_2927.log
== TEST (2019-04-02 10:20:06) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = 2*esfirra+sucos

print(round(" pf "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(" pf "))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:22:09) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = 2*esfirra+sucos

print(" pf "round())


-- ERROR:
File "XXXX", line 5
    print(" pf "round())
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:35:17) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(sucos)

print(round( pf ))

-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:35:44) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(sucos)

print(round,2( pf ))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round,2( pf ))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:37:18) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(sucos)

print(pf(round,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(pf(round,2))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:37:50) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(sucos)

print( pf )

-- OUTPUT:
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:38:44) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(sucos)

print( pf )

-- EXECUTION TIME:
0.182762
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
11.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
13.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:38:47) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(sucos)

print( pf )

-- OUTPUT:
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:39:52) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(sucos)

print( pf (round())

-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:40:20) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(sucos)

print(round,2( pf ))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round,2( pf ))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:40:36) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(sucos)

print(round,2 float( pf ))

-- ERROR:
File "XXXX", line 5
    print(round,2 float( pf ))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:40:55) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(sucos)

print( pf ) 

-- OUTPUT:
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:41:08) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(sucos)

print( pf ) 

-- EXECUTION TIME:
0.176659
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
11.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
13.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:41:09) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(sucos)

print( pf ) 

-- OUTPUT:
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:41:41) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(sucos)

print(round,2()pf)

-- ERROR:
File "XXXX", line 5
    print(round,2()pf)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:41:50) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(sucos)

print(round,2())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round,2())
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:42:07) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(sucos)

print(round,2( pf ))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round,2( pf ))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:43:43) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(sucos)

print(round,2 (pf)) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round,2 (pf)) 
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:44:05) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(sucos)

print(round(pf)) 

-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:44:47) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(1*sucos)

print(round(pf)) 

-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:45:30) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(1*sucos)

print(round,2(pf)) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round,2(pf)) 
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:46:17) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(1*sucos)

print( pf round(2))

-- ERROR:
File "XXXX", line 5
    print( pf round(2))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:46:25) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(1*sucos)

print( pf round,2())

-- ERROR:
File "XXXX", line 5
    print( pf round,2())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:46:52) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(1*sucos)

print(round,2() pf )

-- ERROR:
File "XXXX", line 5
    print(round,2() pf )
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:46:55) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(1*sucos)

print(round,2() pf)

-- ERROR:
File "XXXX", line 5
    print(round,2() pf)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:46:59) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(1*sucos)

print(round,2()pf)

-- ERROR:
File "XXXX", line 5
    print(round,2()pf)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:47:07) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(1*sucos)

print(round( pf )

-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:47:11) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(1*sucos)

print(round( pf )

-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:47:11) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(1*sucos)

print(round( pf )

-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:47:29) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(1*sucos)

print(round,2())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round,2())
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:47:42) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(1*sucos)

print(round,2() pf)

-- ERROR:
File "XXXX", line 5
    print(round,2() pf)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:47:45) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(1*sucos)

print(round,2() pf)

-- ERROR:
File "XXXX", line 5
    print(round,2() pf)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:47:46) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra)+(1*sucos)

print(round,2()pf)

-- ERROR:
File "XXXX", line 5
    print(round,2()pf)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:48:49) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra) + (1*sucos)

print(round,2(pf))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round,2(pf))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:49:19) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra) + (1*sucos)

print( pf round,2())

-- ERROR:
File "XXXX", line 5
    print( pf round,2())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:49:43) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra) + (1*sucos)

print(round(pf)

-- ERROR:
File "XXXX", line 6
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:49:49) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra) + (1*sucos)

print(round, 2(pf)

-- ERROR:
File "XXXX", line 6
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:49:53) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra) + (1*sucos)

print(round, 2(pf))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round, 2(pf))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:51:12) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra) + (1*sucos)

print(round.2()pf)

-- ERROR:
File "XXXX", line 5
    print(round.2()pf)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:51:25) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra) + (1*sucos)

print(round.2( pf ))

-- ERROR:
File "XXXX", line 5
    print(round.2( pf ))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:51:28) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra) + (1*sucos)

print(round.2( pf )

-- ERROR:
File "XXXX", line 5
    print(round.2( pf )
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:51:58) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra) + (1*sucos)

print(round()pf)

-- ERROR:
File "XXXX", line 5
    print(round()pf)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:52:16) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra) + (1*sucos)

print(round, 2 (pf))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round, 2 (pf))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:52:22) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra) + (1*sucos)

print(round, 2 ( pf ))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round, 2 ( pf ))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:52:30) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra) + (1*sucos)

print(round, 2 ( pf ))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round, 2 ( pf ))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:52:41) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra) + (1*sucos)

print(round, 2 ( pf ))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round, 2 ( pf ))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:54:47) 
-- CODE:
sucos = float(input(" valor do suco "))
esfirra = int(input(" qnt de esfirra "))
pf = (2*esfirra) + (1*sucos)

print(round, 2 ( pf ))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round, 2 ( pf ))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
